--- a/app/views/attachments/_attachments_new.html.haml
+++ b/app/views/attachments/_attachments_new.html.haml
@@ -20,6 +20,6 @@
 
               .file_size= number_to_human_size(t.object.try(:attachment_file_size)) unless new_record
 
-              .remove_link{class: new_record ? "" : "display_remove"}= link_to 'Remove', '#', confirm: new_record ? false : "Are you sure want to delete this attachment?"
+              .remove_link{class: new_record ? "" : "display_remove"}= link_to t(:delete_attachment), '#', confirm: new_record ? false : t(:delete_attachment_warning)
 
           .next_attachment
